<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/log">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.parkingspotlocator.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.parkingspotlocator.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.parkingspotlocator.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_parking"
        android:name="com.example.parkingspotlocator.ui.parking.Parking"
        android:label="@string/menu_parking"
        tools:layout="@layout/fragment_parking"/>
    <fragment
        android:id="@+id/log"
        android:name="com.example.parkingspotlocator.ui.login.login"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />
    <action
        android:id="@+id/action_log_to_sign"
        app:destination="@id/sign" />

    <fragment
        android:id="@+id/sign"
        android:name="com.example.parkingspotlocator.ui.register.register"
        android:label="@string/menu_signup"
        tools:layout="@layout/fragment_register" />
    <action
        android:id="@+id/action_sign_to_log"
        app:destination="@id/log" />
    <action
        android:id="@+id/sucess"
        app:destination="@id/nav_home" />
</navigation>